tests/compile-fail/suzu_location_on_variant.rs
use suzunari_error::suzunari_error;

#[suzunari_error]
enum MyError {
    #[suzu(location)]
    Variant {},
}

fn main() {}
